--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>WebGL (Web Graphics Library) is a JavaScript API for rendering interactive 2D and 3D graphics within any compatible web browser without the use of plug-ins. WebGL is fully integrated with other web standards, allowing GPU-accelerated usage of physics and image processing and effects as part of the web page canvas. WebGL became a standard in modern bowsers in 2011</p>
             </section>
             <section>
-                    <iframe allowvr="yes" src="https://madebyevan.com/webgl-water" height="720" width="1280"></iframe>
+                    <a href="http://madebyevan.com/webgl-water">WebGL water example</a>
             </section>
             <section>
                     <p>WebGL is great, but rather involved to program so we have helper libraries, such as ...</p>
